versioned_docs/version-4.0/studio/server/databases/create-new-database/encrypted.mdx
---
title: "Create a Database: Encrypted"
hide_table_of_contents: true
sidebar_label: Encrypted
sidebar_position: 1
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

# Create a Database: Encrypted
<Admonition type="note" title="Note">

* Encryption is possible only if authentication is enabled and a server certificate is defined

* Learn more about **encryption** in: [Encryption At Rest](../../../../server/security/encryption/encryption-at-rest.mdx)  
  Learn how to enable **authentication** in: [Certificate Configuration](../../../../server/security/authentication/certificate-configuration.mdx)  
  Learn about the **secret key** in: [Secret Key Management](../../../../server/security/encryption/secret-key-management.mdx)  
</Admonition>
<Admonition type="warning" title="WARNING" id="warning" href="#warning">

   * You will not have access to the database if the encryption key is lost.  
   * Download, print, or copy and save the key in a safe place. **It will not be available again!**  
   </Admonition>

## Creating Encrypted Database

* In addition to the steps described in the [General Database Creation](../../../../studio/server/databases/create-new-database/general-flow.mdx), click the `Encryption` tab.  


![Figure 1. Create New Database - Encrypted](./assets/new-database-encrypted.png)

1. **Key**
   * This is the base 64 key generated by the server.  
   * A different new key can be generated by the server when clicking the `refresh` button.  
   * Learn more about this key in: [Secret Key Management](../../../../server/security/encryption/secret-key-management.mdx)  

2. **QR Code**
   * The QR code representing the key  

3. **Confirm that you've securely saved the key**




